# autopass

./: .gitignore  Cargo.toml  Dockerfile  install.sh
.pass/: AwIjNgd39uEAlisc657M7eFMR0CNZXa8  YGGGOYPasXre0l5P3eqDNrE6mXLhrCTd
net/: Cargo.toml
net/src/: discovery.rs  keypair.rs  main.rs  service.rs  trust.rs
src/: .service.rs.swp  ap.rs  api.rs  cli.rs  hash.rs  lib.rs  main.rs  pass.rs  service.rs  upgrade.rs
src/bins/: ap.rs  apcli.rs  upgrader.rs
src/gui/: confirmbox.rs  inputprompt.rs  mod.rs  msgbox.rs  pwdprompt.rs  validator.rs
src/spec/: encryptor.rs  encryptor_legacy.rs  identity_v1.rs  mod.rs  service.rs  service_v1.rs  service_v2.rs
user/: Cargo.toml  Dockerfile
user/src/: api.rs  bitmap.rs  cli.rs  lib.rs  upgrade.rs
user/src/bins/: ap.rs  upgrader.rs
user/src/gui/: confirmbox.rs  inputprompt.rs  mod.rs  msgbox.rs  servicelist.rs  validator.rs
user/src/spec/: encryptor.rs  identity_v1.rs  identity_v2.rs  mod.rs  service_v1.rs  service_v2.rs
