[package]
name = "pass"
version = "0.1.0"
authors = ["adschwab"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2.36"
clipboard = "^0.5"
serde = { version = "^1", features = ["derive"] }
bincode = "^1"
clap = "2.33.0"
termion = "1.5.5"
dirs = "2.0.2"
rand = "0.7.3"
time = { version = "0.3.34", features = ["formatting"] }
egui = { version = "0.26", optional = true }
eframe = { version = "0.26", optional = true }
lazy_static = "1.4.0"

[features]
gui = ["egui", "eframe"]

[[bin]]
name = "apcli"
path = "src/main.rs"

[[bin]]
name = "ap"
path = "src/ap.rs"
required-features = ["gui"]
