[package]
name = "pass"
version = "0.1.0"
authors = ["adschwab"]
edition = "2018"

[dependencies]
rust-crypto = "^0.2.36"
clipboard = "^0.5"
serde = { version = "^1", features = ["derive"] }
bincode = "^1"
clap = { version = "2.33.0", optional = true }
termion = { version = "1.5.5", optional = true }
dirs = "2.0.2"
rand = "0.7.3"
time = { version = "0.3.34", features = ["formatting", "local-offset"] }
egui = { version = "0.26", optional = true }
eframe = { version = "0.26", optional = true }

[features]
gui = ["egui", "eframe"]
cli = ["clap", "termion"]

[[bin]]
name = "apcli"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "ap"
path = "src/ap.rs"
required-features = ["gui"]
