[package]
name = "pass"
version = "0.1.0"
authors = ["adschwab"]
edition = "2018"

[dependencies]
clipboard = "^0.5"
serde = { version = "^1", features = ["derive"] }
bincode = "^1"
clap = { version = "2.33.0", optional = true }
termion = { version = "1.5.5", optional = true }
dirs = "2.0.2"
rand = "0.7.3"
time = { version = "0.3.34", features = ["formatting", "local-offset"] }
egui = { version = "0.31", optional = true }
eframe = { version = "0.31", optional = true }
aes-gcm = "0.10.3"
sha2 = "0.10"
thiserror = "1"

[features]
gui = ["egui", "eframe"]
cli = ["clap", "termion"]

[[bin]]
name = "apcli"
path = "src/bins/apcli.rs"
required-features = ["cli"]

[[bin]]
name = "ap"
path = "src/bins/ap.rs"
required-features = ["gui"]

[[bin]]
name = "upgrader"
path = "src/bins/upgrader.rs"
required-features = ["cli"]